--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ blinker==1.9.0
 click==8.2.1
 flake8==7.2.0
 Flask==3.1.1
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 mccabe==0.7.0
+packaging==25.0
 pycodestyle==2.13.0
 pyflakes==3.3.2
 Werkzeug==3.1.3
