--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,11 @@ description = ""
 authors = [
     {name = "vitallcore",email = "vitaslipknot@gmail.com"}
 ]
+packages = [
+    { include = "sadovnik" }
+]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.10"
 dependencies = [
     "blinker (>=1.9.0,<2.0.0)",
     "click (>=8.2.1,<9.0.0)",
