--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,7 @@ description = ""
 authors = [
     {name = "vitallcore",email = "vitaslipknot@gmail.com"}
 ]
-packages = [
-    { include = "sadovnik" }
+package-mode = false
 ]
 readme = "README.md"
 requires-python = ">=3.10"
